Rewrite based quick fix/assist work in Eclipse